--- a/templates/view_inspection.html
+++ b/templates/view_inspection.html
@@ -321,7 +321,7 @@
         }
 
         function generateReport() {
-            window.open(`/api/inspections/{{ inspection.id }}/report`, '_blank');
+            window.open(`/api/inspections/{{ inspection.id }}/report/pdf`, '_blank');
         }
 
         // Drag and drop functionality
