--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,19 @@
                 <i class="fas fa-clipboard-check me-2"></i>
                 CheckMate Virtue
             </a>
+            <div class="navbar-nav ms-auto">
+                {% if user %}
+                    <span class="navbar-text me-3">
+                        <i class="fas fa-user me-1"></i>
+                        {{ user.name }}
+                    </span>
+                    <a class="nav-link" href="/inspections">Inspections</a>
+                    <a class="nav-link" href="/inspections/new">New Inspection</a>
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+                {% else %}
+                    <a class="nav-link" href="/login">Login</a>
+                {% endif %}
+            </div>
         </div>
     </nav>
 
