--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                         <div class="card-body">
                             <i class="fas fa-car fa-3x text-primary mb-3"></i>
                             <h5 class="card-title">Automotive</h5>
-                            <p class="card-text">Vehicle inspections and maintenance</p>
+                            <p class="card-text">Multi-industry inspections and maintenance</p>
                         </div>
                     </div>
                 </div>
